--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/window"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="411dp"
         android:layout_height="597dp"
+        android:id="@+id/background"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
